# java-cpp-fun

./: README.md  run.sh
cpp/: CMakeLists.txt
cpp/src/: PeakPerformanceJava.cpp  PeakPerformanceJava.h  main.cc
java/: pom.xml
java/src/main/java/com/github/animeshtrivedi/jcf/: Main.java  PeakPerformance.java  PeakPerformanceOnHeap.java  Platform.java
